HeroHubPackage/main/default/objects/Team__c/fields/In_Lead__c.field-meta.xml
<CustomField>
    <fullName>In_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Lead?</label>
    <type>Checkbox</type>
</CustomField>