HeroHubPackage/main/default/objects/Team__c/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <label>Secondary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>