HeroHubPackage/main/default/objects/Team__c/fields/Slogan__c.field-meta.xml
<CustomField>
    <fullName>Slogan__c</fullName>
    <label>Slogan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>