HeroHubPackage/main/default/objects/Team__c/fields/Squad_Sum__c.field-meta.xml
<CustomField>
    <fullName>Squad_Sum__c</fullName>
    <label>Squad Sum</label>
    <summarizedField>Squad__c.Score__c</summarizedField>
    <summaryForeignKey>Squad__c.Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>